<resources>
    <string name="app_name">Scissorrockpapergames</string>
    <string name="paper2">Paper2</string>
    <string name="vs">VS</string>
    <string name="result">Result</string>
    <string name="refreshbutton">RefreshButton</string>
    <string name="player1">Player1</string>
    <string name="com">COM</string>
    <string name="equals">Draw</string>
    <string name="not_equal">NoDraw</string>
    <string name="player1win">Player1 Win!</string>
    <string name="comwin">COM Win!</string>
</resources>