<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="3dp"
        android:rotation="-20"
        android:rotationY="30"
        android:text="Gunting"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="3dp"
        android:rotation="-20"
        android:rotationY="30"
        android:text="Kertas"
        android:textColor="#FFC107"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="182dp"
        android:rotation="-20"
        android:rotationY="30"
        android:text="Batu"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/versus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="20dp"
        android:text="@string/player1"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@id/stone1"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="30dp"
        android:text="@string/com"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@id/stone2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/stone1"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_below="@id/paper1"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/paper1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/batu" />

    <ImageButton
        android:id="@+id/paper1"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/scissor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stone1"
        app:srcCompat="@drawable/kertas" />

    <ImageButton
        android:id="@+id/scissor1"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gunting" />

    <ImageButton
        android:id="@+id/stone2"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_below="@id/paper2"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/paper2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/batu" />

    <ImageButton
        android:id="@+id/paper2"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_below="@id/scissor2"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:contentDescription="@string/paper2"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/scissor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/kertas" />

    <ImageButton
        android:id="@+id/scissor2"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/gunting" />

    <TextView
        android:id="@+id/versus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-15"
        android:text="@string/vs"
        android:textColor="#FF0000"
        android:textSize="50sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-15"
        android:text="@string/result"
        android:textSize="40sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:contentDescription="@string/refreshbutton"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/refresh" />

</androidx.constraintlayout.widget.ConstraintLayout>